--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
 services:
+    phpmyadmin:
+        image: phpmyadmin:latest
+        ports:
+            - "8080:80"
+        environment:
+            PMA_HOST: mysql
+            MYSQL_ROOT_PASSWORD: your_mysql_root_password
+
     laravel.test:
         build:
-            context: './vendor/laravel/sail/runtimes/8.4'
+            context: './vendor/laravel/sail/runtimes/8.2'
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
