--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.0",
+        "filament/notifications": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
